--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
 </header>
 <nav id="TOC">
 <ul>
+<li><a href="#license">License</a></li>
 <li><a href="#about-this-text">About this text</a></li>
 <li><a href="#find-people">Find People</a><ul>
 <li><a href="#who-are-possible-participants">Who are possible participants?</a></li>
@@ -96,9 +97,10 @@
 </ul></li>
 </ul>
 </nav>
-<!-- compile with  pandoc --toc -B templates/includeBefore.pandoc -A templates/includeBefore.pandoc  -s -c styles/styles.css allURBook.md -t html5 -o allUR.html-->
+<!-- compile with  pandoc --toc -B templates/includeBefore.pandoc -A templates/includeBefore.pandoc  -s -c styles/styles.css text/allURBook.md -t html5 -o index.html-->
 
-
+<h1 id="license"><a href="#license">License</a></h1>
+<p>This text and images (»=book«) are licensed under the terms of the <a href="https://creativecommons.org/licenses/by/4.0/">Creative Commons By 4.0</a> License.</p>
 <h1 id="about-this-text"><a href="#about-this-text">About this text</a></h1>
 <p>This book is written for all who want to design product according to the needs of human beings. This text teaches you how to find potential users and to find out about their activities, motivations and problems and how to analyze the gathered data in a way that makes it usable for you design process. To have knowledge about the how and why of the users work allows you to create innovative product that meet the needs you found out about. As well you can use this knowledge to improve existing products and adapt them using your insights.</p>
 <p>I try to teach methods for user needs research in a way that is descriptive and allows quick application of the learned methods by using tools that are readily available to you. I give examples for the methods to demonstrate their application in practice. I hope you can imagine yourself applying the describes methods when reading – and I want to avoid teaching something that seems like mere theory to you.</p>
@@ -499,7 +501,7 @@ conversation: You ask questions, the user answered them. -->
 </div>
 <p>or</p>
 <div class="example">
-<p>»So: If I want to print something first I need to ask for their color profile, when I have this, I load it in indesign, choose the profile in the pdf dialog and then export it?« »Yes. I usually to a test afterwards by opening the pdf in addition«</p>
+<p>»So: If I want to print something first I need to ask for their color profile, when I have this, I load it in InDesign, choose the profile in the pdf dialog and then export it?« »Yes. I usually to a test afterwards by opening the pdf in addition«</p>
 </div>
 <p>These tehcniques explained here involve jumping back to some previously mentioned topic. This may seem difficult, since you need to remember some particular information (to refer to it later) while carrying on with the research. However it is not that hard – just give it a try. As well, keep in mind that you can make brief notes reminding you of things that are of interest – and with a look on your note sheet they will return to your memory if you forgot about them.</p>
 <h2 id="how-exactly-would-you-do-it"><a href="#how-exactly-would-you-do-it">How exactly would you do it?</a></h2>
@@ -717,7 +719,7 @@ Memory fades quickly
 <h3 id="doing-the-right-analysis"><a href="#doing-the-right-analysis">Doing the right analysis?</a></h3>
 <p>The data analysis is done by inferring principles from single data points like utterances and observations. Thus the process is empirical (as it is based on gathered data) but if the same data is used, analysis made by different people will differ. This is because the result of the analysis depends on the reasonable but still individual and debatable interpretation of the data. You could say that »looking at last years design to reuse elements« belongs to a group concerned with »I want to save saving time« or to one related to the topic of »reviewing designs for inspiration« (given that it could serve both from the user's perspective).</p>
 <p>There is no right or wrong nor a clear cut criteria of being »close enough« to the data when you create the principles and groups. Instead of having a clear, measurable rule like »you must have 0.5 significance in statistics, most important is that your analysis is plausible (instead of »right« or »wrong«).</p>
-<p>I compare the process of analysis to building a house from a box of lego bricks. These bricks are like the not-yet-analysed data you start with. When you build a house out of these bricks, there is no »right« building. But it is not a process that is random.</p>
+<p>I compare the process of analysis to building a house from a box of Lego<sup>®</sup> bricks. These bricks are like the not-yet-analysed data you start with. When you build a house out of these bricks, there is no »right« building. But it is not a process that is random.</p>
 <p>There are many, many ways to stack up the bricks – but only a very few of these ways will result in something that can be plausibly called a house.</p>
 <div class="gallery two">
 <figure>
@@ -727,7 +729,7 @@ Memory fades quickly
 <img src="images/lego_houseFinished.jpg" alt="one way to build a house" /><figcaption>one way to build a house</figcaption>
 </figure>
 </div>
-<p>As well how your final Lego house will look like is not determined from the beginning, rather you will change designs, move walls and sometimes try to use the same piece in different parts of the building to try out and improve. The same things will happen when you analyze data: There are many very many possible ways to just arrange the data, but only some of them will create something that is meaningful to you and others. This creation of a meaningful structure is not determined at the beginning, but a process, just like building your lego house, in which you trial, fail, find improvements and step by step come closer to a structure you are satisfied with.</p>
+<p>As well how your final Lego<sup>®</sup> house will look like is not determined from the beginning, rather you will change designs, move walls and sometimes try to use the same piece in different parts of the building to try out and improve. The same things will happen when you analyze data: There are many very many possible ways to just arrange the data, but only some of them will create something that is meaningful to you and others. This creation of a meaningful structure is not determined at the beginning, but a process, just like building your Lego<sup>®</sup> house, in which you trial, fail, find improvements and step by step come closer to a structure you are satisfied with.</p>
 <h3 id="hierarchical-organization-of-data"><a href="#hierarchical-organization-of-data">Hierarchical organization of data</a></h3>
 <p>We will analyze our data by sorting it in groups (you can as well say: by clustering it). The data in one group will relate to a particular theme or, better, a principle, which is common to the data in the group.</p>
 <p>We write down this theme or principle as a title for the group. If you analyze your data using paper notes, your titles will be written on a sticky note of a specific color (choose one, but stick with it). If you use a word processor, use a headline for the groups titles.</p>
