--- a/index.html
+++ b/index.html
@@ -719,17 +719,17 @@ Memory fades quickly
 <h3 id="doing-the-right-analysis"><a href="#doing-the-right-analysis">Doing the right analysis?</a></h3>
 <p>The data analysis is done by inferring principles from single data points like utterances and observations. Thus the process is empirical (as it is based on gathered data) but if the same data is used, analysis made by different people will differ. This is because the result of the analysis depends on the reasonable but still individual and debatable interpretation of the data. You could say that »looking at last years design to reuse elements« belongs to a group concerned with »I want to save saving time« or to one related to the topic of »reviewing designs for inspiration« (given that it could serve both from the user's perspective).</p>
 <p>There is no right or wrong nor a clear cut criteria of being »close enough« to the data when you create the principles and groups. Instead of having a clear, measurable rule like »you must have 0.5 significance in statistics, most important is that your analysis is plausible (instead of »right« or »wrong«).</p>
-<p>I compare the process of analysis to building a house from a box of Lego<sup>®</sup> bricks. These bricks are like the not-yet-analysed data you start with. When you build a house out of these bricks, there is no »right« building. But it is not a process that is random.</p>
+<p>I compare the process of analysis to building a house from a box of Lego® bricks. These bricks are like the not-yet-analysed data you start with. When you build a house out of these bricks, there is no »right« building. But it is not a process that is random.</p>
 <p>There are many, many ways to stack up the bricks – but only a very few of these ways will result in something that can be plausibly called a house.</p>
 <div class="gallery two">
 <figure>
-<img src="images/lego_bricksToStartWith.jpg" alt="possible arrangement of stones – but not a house" /><figcaption>possible arrangement of stones – but not a house</figcaption>
+<img src="images/lego_bricksToStartWith.jpg" alt="possible arrangement of bricks – but not a house" /><figcaption>possible arrangement of bricks – but not a house</figcaption>
 </figure>
 <figure>
 <img src="images/lego_houseFinished.jpg" alt="one way to build a house" /><figcaption>one way to build a house</figcaption>
 </figure>
 </div>
-<p>As well how your final Lego<sup>®</sup> house will look like is not determined from the beginning, rather you will change designs, move walls and sometimes try to use the same piece in different parts of the building to try out and improve. The same things will happen when you analyze data: There are many very many possible ways to just arrange the data, but only some of them will create something that is meaningful to you and others. This creation of a meaningful structure is not determined at the beginning, but a process, just like building your Lego<sup>®</sup> house, in which you trial, fail, find improvements and step by step come closer to a structure you are satisfied with.</p>
+<p>As well how your final Lego® house will look like is not determined from the beginning, rather you will change designs, move walls and sometimes try to use the same piece in different parts of the building to try out and improve. The same things will happen when you analyze data: There are many very many possible ways to just arrange the data, but only some of them will create something that is meaningful to you and others. This creation of a meaningful structure is not determined at the beginning, but a process, just like building your Lego® house, in which you trial, fail, find improvements and step by step come closer to a structure you are satisfied with.</p>
 <h3 id="hierarchical-organization-of-data"><a href="#hierarchical-organization-of-data">Hierarchical organization of data</a></h3>
 <p>We will analyze our data by sorting it in groups (you can as well say: by clustering it). The data in one group will relate to a particular theme or, better, a principle, which is common to the data in the group.</p>
 <p>We write down this theme or principle as a title for the group. If you analyze your data using paper notes, your titles will be written on a sticky note of a specific color (choose one, but stick with it). If you use a word processor, use a headline for the groups titles.</p>
@@ -997,15 +997,18 @@ While I think I gained something out of it, these changes did not result in a ne
 </ul>
 <h3 id="consentForm"><a href="#consentForm">Consent and Release Form</a></h3>
 <p>(based on a form from <a href="http://www.usability.gov/">http://www.usability.gov</a>, downloadable under <a href="http://www.usability.gov/how-to-and-tools/resources/templates/consent-recording-release-form-adult.html">http://www.usability.gov/how-to-and-tools/resources/templates/consent-recording-release-form-adult.html</a>, released as public domain)</p>
-<p><strong>Consent &amp; Recording Release Form - Adult</strong></p>
+<p><br /><br /> <strong>Consent &amp; Recording Release Form - Adult</strong></p>
 <p><br /><br /> I agree to participate in the study conducted and recorded by the [Agency/Organization].</p>
 <p><br /> I understand and consent to the use and release of the recording by [Agency/Organization]. I understand that the information and recording is for research purposes only and that my name and image will not be used for any other purpose. I relinquish any rights to the recording and understand the recording may be copied and used by [Agency/Organization] without further permission.</p>
 <p><br /> I understand that participation in this study is voluntary and I agree to immediately raise any concerns or areas of discomfort during the session with the study administrator.</p>
 <p><br /> Please sign below to indicate that you have read and you understand the information on this form.</p>
-<p><br /><br /> Date:_________</p>
-<p><br /> Please print your name: ____________________________________________________</p>
-<p>Please sign your name: ____________________________________________________</p>
-<p><br /> Thank you!</p>
+<p> </p>
+<p>Date: _________________</p>
+<p> </p>
+<p>Please print your name: ___________________________________</p>
+<p> </p>
+<p>Please sign your name: ___________________________________<br />  </p>
+<p>Thank you!</p>
 <p><br /> We appreciate your participation.</p>
 <p><br /><br /><br /><br /><br /><br /></p>
 <section class="footnotes">
