--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 <li><a href="#how-many-participants-do-i-need">How many participants do I need?</a></li>
 </ul></li>
 <li><a href="#prepare-the-session">Prepare the session</a><ul>
-<li><a href="#questiontopics">What do your want to find out?</a></li>
+<li><a href="#questiontopics">What do you want to find out?</a></li>
 <li><a href="#write-a-cheat-sheet">Write a cheat sheet</a></li>
 <li><a href="#equipment">Equipment</a><ul>
 <li><a href="#note-taking">Note taking</a></li>
@@ -99,8 +99,8 @@
 <li><a href="#getting-it-across">Getting it across</a></li>
 <li><a href="#who-is-your-audience">Who is your audience?</a></li>
 <li><a href="#explain-your-research">Explain your Research</a><ul>
-<li><a href="#explain-your-methods">Explain your Methods</a></li>
-<li><a href="#site-and-sample">Site and Sample</a></li>
+<li><a href="#describe-your-methods">Describe your Methods</a></li>
+<li><a href="#describe-site-and-sample">Describe site and sample</a></li>
 </ul></li>
 <li><a href="#components-of-deliverables-and-reports">Components of deliverables and reports</a><ul>
 <li><a href="#text">Text</a></li>
@@ -121,7 +121,7 @@
 </ul></li>
 </ul>
 </nav>
-<!-- compile with  pandoc --toc -B templates/includeBefore.pandoc -A templates/includeAfter.pandoc  -s -c styles/styles.css text/allURBook.md -t html5 -o index.html -->
+<!-- compile with  "pandoc --toc -B templates/includeBefore.pandoc -A templates/includeAfter.pandoc  -s -c styles/styles.css text/allURBook.md -t html5 -o index.html" -->
 
 <h1 id="license"><a href="#license">License</a></h1>
 <p>This text and images (»=book«) are licensed under the terms of the <a href="https://creativecommons.org/licenses/by/4.0/">Creative Commons By 4.0</a> License.</p>
@@ -175,7 +175,7 @@
 <p>You can consider doing your research iteratively: start with three or four participants and begin with the analysis as soon as possible (steps like writing your comments to the data or even starting to create possible grouping is possible after having the data of at least two participants). Take a look at the first (preliminary) findings: are the patterns repeating themselves and are they consistent between participants and situations? Or do they vary widely? If they are consistent, you may do research with few additional participants to refine and check and to explore details – or, if time is up, leave it the way it is.</p>
 <p>If preliminary findings vary and it is hard to see any patterns consider involving more participants and review the scope and goal of your research. It is possible that there is just a variety of patters and the need for more users to make sense of the data. But it could as well be the case that your research focus is very broad and hard to research. In this case try to narrow down the focus and the activities you need to know about before involving the next batch of participants.</p>
 <h1 id="prepare-the-session"><a href="#prepare-the-session">Prepare the session</a></h1>
-<h2 id="questiontopics"><a href="#questiontopics">What do your want to find out?</a></h2>
+<h2 id="questiontopics"><a href="#questiontopics">What do you want to find out?</a></h2>
 <p>Before you collect the data, decide what you want to find out. Let's look at some topics that might be of interest exploring:</p>
 <p>I usually have three aspects I think of when I prepare my questions:</p>
 <ol type="1">
@@ -220,7 +220,7 @@
 <p>In later sections we will have a further look at the does and dont’s of questions.</p>
 <h2 id="write-a-cheat-sheet"><a href="#write-a-cheat-sheet">Write a cheat sheet</a></h2>
 <p>You should ensure that questions you prepare are still on your mind when doing the interview. A good way to ensure this is to taking a cheat sheet along.</p>
-<p>What goes into such a sheet? The biggest part will be <strong>questions</strong> which you created beforehand (take a look at <a href="#questiontopics">»What do your want to find out?«</a> for collecting possible questions). When you write the questions on the cheat sheet, start with the general topics and progress towards more specific ones. This is the order that makes sense in the course of a research session. Nevertheless, that order is only a helpful guess. You will usually deviate a bit (or a lot) from your cheat sheet.</p>
+<p>What goes into such a sheet? The biggest part will be <strong>questions</strong> which you created beforehand (take a look at <a href="#questiontopics">»What do you want to find out?«</a> for collecting possible questions). When you write the questions on the cheat sheet, start with the general topics and progress towards more specific ones. This is the order that makes sense in the course of a research session. Nevertheless, that order is only a helpful guess. You will usually deviate a bit (or a lot) from your cheat sheet.</p>
 <p>Often I include some kind of <strong>checklist</strong> on the top, especially if there are legal matters involved, such as signing a consent form. Thus I can tick off what we already dealt with and immediately see if I forgot something.</p>
 <p>As a beginner you may have some difficulties with formulating your questions without preparations when spontaneously entering on a new subject that happens to emerge in the research session.</p>
 <p>In this case you can help yourself along with some reminders on the sheet, like »Activities/Motivations/Problems«, »How and Why«, or, for the graphics design topic: »creativity/variations/creative rules/technology« or the like.</p>
@@ -589,7 +589,7 @@ conversation: You ask questions, the user answered them. -->
 <p>If you don’t care too much about your handwriting you can write notes without much looking at the paper except for some occasional glances. In case you find something very important and fear forgetting it, you can ask the participant to repeat the utterance – but keep this to a minimum.</p>
 <p>If you can, try to provide some context in your notes. Thus, the point you write down has a meaning on it’s own:</p>
 <div class="example">
-Rather than writing <em>»she clicks«</em> (what? Why?) you could write <em>»Clicks save button → finishes balancing the elements«</em> or the like.
+Rather than writing <em>»she clicks«</em> (what? Why?) you could write <em>»Clicks save button, has finished balancing the elements«</em> or the like.
 </div>
 <div class="example">
 Rather than »creates empty page« write »creates empty pages to organize drafts«
@@ -1128,7 +1128,7 @@ While I think I gained something out of it, these changes did not result in a ne
 <p>Keep in mind that the jargon that might be used by others has its own rules. Only use words and concepts that will be understood by your audience and which you know yourself – don’t fake it.</p>
 <h2 id="explain-your-research"><a href="#explain-your-research">Explain your Research</a></h2>
 <p>You should not only communicate your results but as well how you got to them. This permits others to evaluate your reserach in the context of the explained methods and enables you to show that you arrived at your results using an empirical and structured approach.</p>
-<h3 id="explain-your-methods"><a href="#explain-your-methods">Explain your Methods</a></h3>
+<h3 id="describe-your-methods"><a href="#describe-your-methods">Describe your Methods</a></h3>
 <p>Explain the research methods you used to arrive at your results. This includes:</p>
 <ul>
 <li>Selection of participants (sampling) </li>
@@ -1147,7 +1147,7 @@ While I think I gained something out of it, these changes did not result in a ne
 <p>(Analysis)</p>
 <p>After the research sessions we gathered all notes and supplemented forgotten or unclear data by using the audio recordings and sketches. We annotated all data for possible meanings and interrelations to create a preliminary scheme for organizing the data into meaningful principles. This patterns served as a starting point for organizing and reordering the data during several iterations. Thus, the process was similar to affinity diagramming (Beyer, Holtzblatt) or Thematic Analysis (Virginia, Clarke)</p>
 </div>
-<h3 id="site-and-sample"><a href="#site-and-sample">Site and Sample</a></h3>
+<h3 id="describe-site-and-sample"><a href="#describe-site-and-sample">Describe site and sample</a></h3>
 <p>To make your research less abstract for the audience, give an introduction to the environment you did the research in. Describe it in a way that allows others to imagine it, for example by showing sketches, photos of tools or the participant’s workplace. Remember to show only what the participants agreed to share with you and the audience.</p>
 <p>In addition to the context, describe your research participants by giving a general user profile. Thus you don’t share any personal data of anyone but allow your audience to have some ideas of the participants.</p>
 <div class="example">
