--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
 </ul></li>
 </ul>
 </nav>
-<!-- compile with  "pandoc --toc -B templates/includeBefore.pandoc -A templates/includeAfter.pandoc  -s -c styles/styles.css text/allURBook.md -t html5 -o index.html" -->
+<!-- compile with  ""pandoc --toc -B templates/includeBefore.pandoc -A templates/includeAfter.pandoc  -s -c styles/styles.css text/allURBook.md -t html5 -o index.html"" -->
 
 <h1 id="license"><a href="#license">License</a></h1>
 <p>This text and images (»=book«) are licensed under the terms of the <a href="https://creativecommons.org/licenses/by/4.0/">Creative Commons By 4.0</a> License.</p>
