--- a/index.html
+++ b/index.html
@@ -183,7 +183,12 @@
 <li>Motivations, what the user wants to archive, what is important for him/her</li>
 <li>Problems: things that interfere with the users activities and motivations</li>
 </ol>
-<p>There could be many other aspects, but I find these three good because * they cover a wide range of possible topics questions * they cover design relevant topics * three points are easy enough to remember even in the midst of research.</p>
+<p>There could be many other aspects, but I find these three good because</p>
+<ul>
+<li>they cover a wide range of possible topics questions</li>
+<li>they cover design relevant topics</li>
+<li>three points are easy enough to remember even in the midst of research.</li>
+</ul>
 <p>When thinking about what you want to find out, keep in mind that user need research is not hypothesis testing (like when doing statistics for a scientific publications). You want to find out new things, especially such that you did not know about nor expected. Thus these questions are a starting point.</p>
 <p>Let me show you the questions I came up with for finding out about the needs of designers who create layouts.</p>
 <h4 id="activities"><a href="#activities">Activities</a></h4>
