--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes">
   <meta name="author" content="Jan Dittrich">
   <meta name="dcterms.date" content="2014-01-01">
-  <title>User needfinding for beginners</title>
+  <title>A Beginner’s Guide to Finding User Needs</title>
   <style type="text/css">code{white-space: pre;}</style>
   <!--[if lt IE 9]>
     <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
@@ -16,7 +16,7 @@
 <body>
 <div id="wrapper">
 <header>
-<h1 class="title">User needfinding for beginners</h1>
+<h1 class="title">A Beginner’s Guide to Finding User Needs</h1>
 <h2 class="author">Jan Dittrich</h2>
 <h3 class="date">2014</h3>
 </header>
@@ -124,7 +124,7 @@
 <!-- compile with  ""pandoc --toc -B templates/includeBefore.pandoc -A templates/includeAfter.pandoc  -s -c styles/styles.css text/allURBook.md -t html5 -o index.html"" -->
 
 <h1 id="license"><a href="#license">License</a></h1>
-<p>This text and images (»=book«) are licensed under the terms of the <a href="https://creativecommons.org/licenses/by/4.0/">Creative Commons By 4.0</a> License.</p>
+<p><a rel="license" href="http://creativecommons.org/licenses/by/4.0/"><img alt="Creative Commons Lizenzvertrag" style="border-width:0" src="https://i.creativecommons.org/l/by/4.0/88x31.png" /></a><br /><span xmlns:dct="http://purl.org/dc/terms/" property="dct:title">A Beginner’s Guide to Finding User Needs</span> by <a xmlns:cc="http://creativecommons.org/ns#" href="http://jdittrich.github.io/userNeedResearchBook/" property="cc:attributionName" rel="cc:attributionURL">Jan Dittrich</a> ist lizenziert unter einer <a rel="license" href="http://creativecommons.org/licenses/by/4.0/">Creative Commons Attribution 4.0 International License</a>.</p>
 <h1 id="about-this-text"><a href="#about-this-text">About this text</a></h1>
 <p>This book is written for all those who want to design products according to the needs of human beings. This text teaches you how to find potential users and how to find out about their activities, motivations and problems. I demonstrate how to analyze the gathered data in a way that makes it usable and useful for you design process.</p>
 <p>To have knowledge about the »how« and »why« of the user’s work allows you to create innovative products that meet the users’ needs. As well, you can utilize this knowledge to improve existing products.</p>
