--- a/index.html
+++ b/index.html
@@ -114,7 +114,8 @@
 <li><a href="#written-reports">Written Reports</a></li>
 <li><a href="#slides">Slides</a></li>
 </ul></li>
-<li><a href="#appendix">Appendix</a><ul>
+<li><a href="#read-more">Read more…</a><ul>
+<li><a href="#further">Further</a></li>
 <li><a href="#examples">Examples</a></li>
 <li><a href="#consentForm">Consent and Release Form</a></li>
 </ul></li>
@@ -124,7 +125,7 @@
 <!-- compile with  ""pandoc --toc -B templates/includeBefore.pandoc -A templates/includeAfter.pandoc  -s -c styles/styles.css text/allURBook.md -t html5 -o index.html"" -->
 
 <h1 id="license"><a href="#license">License</a></h1>
-<p><a rel="license" href="http://creativecommons.org/licenses/by/4.0/"><img alt="Creative Commons Lizenzvertrag" style="border-width:0" src="https://i.creativecommons.org/l/by/4.0/88x31.png" /></a><br /><span xmlns:dct="http://purl.org/dc/terms/" property="dct:title">A Beginner’s Guide to Finding User Needs</span> by <a xmlns:cc="http://creativecommons.org/ns#" href="http://jdittrich.github.io/userNeedResearchBook/" property="cc:attributionName" rel="cc:attributionURL">Jan Dittrich</a> ist lizenziert unter einer <a rel="license" href="http://creativecommons.org/licenses/by/4.0/">Creative Commons Attribution 4.0 International License</a>.</p>
+<p><a rel="license" href="http://creativecommons.org/licenses/by/4.0/"><img alt="Creative Commons Lizenzvertrag" style="border-width:0" src="https://i.creativecommons.org/l/by/4.0/88x31.png" /></a><br /><span xmlns:dct="http://purl.org/dc/terms/" property="dct:title">A Beginner’s Guide to Finding User Needs</span> by <a xmlns:cc="http://creativecommons.org/ns#" href="http://jdittrich.github.io/userNeedResearchBook/" property="cc:attributionName" rel="cc:attributionURL">Jan Dittrich</a> licensed under a <a rel="license" href="http://creativecommons.org/licenses/by/4.0/">Creative Commons Attribution 4.0 International License</a>.</p>
 <h1 id="about-this-text"><a href="#about-this-text">About this text</a></h1>
 <p>This book is written for all those who want to design products according to the needs of human beings. This text teaches you how to find potential users and how to find out about their activities, motivations and problems. I demonstrate how to analyze the gathered data in a way that makes it usable and useful for you design process.</p>
 <p>To have knowledge about the »how« and »why« of the user’s work allows you to create innovative products that meet the users’ needs. As well, you can utilize this knowledge to improve existing products.</p>
@@ -1272,7 +1273,16 @@ While I think I gained something out of it, these changes did not result in a ne
 <figure>
 <img src="images/slidesExample.png" alt="a row of slides from a presentation on wiki use for teaching at university" /><figcaption>a row of slides from a presentation on wiki use for teaching at university</figcaption>
 </figure>
-<h2 id="appendix"><a href="#appendix">Appendix</a></h2>
+<h2 id="read-more"><a href="#read-more">Read more…</a></h2>
+<p>If you are not fed up with finding user needs, read those books.</p>
+<ul>
+<li><p>Goodman, Elizabeth ; Kuniavsky, Mike ; Moed, Andrea: <strong>Observing the User Experience : A Practitioner's Guide to User Research</strong>. 2. Edition. Amsterdam: Elsevier, 2012. ISBN 978-0-123-84870-3 <br> <em>covers multiple user reserach methods as well as reserach planning, recruiting and communicating results. Particulary interesting are the chapters on recruiting and analysis of qualitative data.</em></p></li>
+<li><p>Portigal, Steve: <strong>Interviewing Users : How to Uncover Compelling Insights</strong>. 1. Edition. New York: Rosenfeld Media, LLC, 2013. ISBN 978---1-9-33-82-0 <br> *As the title suggestes it’s focused on asking questions and listening to answers, though it includes additional methods as well. Includes lots of useful tips.</p></li>
+<li><p>Galman, Sally Campbell: <strong>Shane, the Lone Ethnographer: A Beginner's Guide to Ethnography</strong>. Lanham: Rowman Altamira, . ISBN 978-0-759-10344-3 <br> <em>Lots of the methods I described originated in ethnography. This book gives an hands on and thoughtful introduction to enthography. Comes as a comic and is fun to read. Minor flaw: The lettering is a bit obscure</em></p></li>
+<li><p>Clarke, Victoria ; Braun, Virginia: <strong>Successful Qualitative Research : A Practical Guide for Beginners</strong>. New.. London: SAGE, 2013. ISBN 978-1-847-87581-5 <br> <em>This book is aimed at aspiring academic researchers. While involving theory, it is still a very practical guide. It inspired much of the analysis section in this book. Interesting for those who want to know more about doing thorough analysis of data (using the method of »Thematic Analysis«) </em></p></li>
+<li><p>Holtzblatt, Karen ; Wendell, Jessamyn Burns ; Wood, Shelley: <strong>Rapid Contextual Design : A How-to Guide to Key Techniques for User-centered Design</strong>. Amsterdam: Elsevier, 2005. ISBN 978-0-123-54051-5 <br> *Describes a collection of methods user research. It is aimed at bigger teams (I assume with time and money). However, its mentioned here since the idea of grouping data as core activity of data analyis is from it.</p></li>
+</ul>
+<h3 id="further"><a href="#further">Further</a></h3>
 <h3 id="examples"><a href="#examples">Examples</a></h3>
 <ul>
 <li>Watch a <a href="https://www.youtube.com/watch?v=9t-_hYjAKww">demonstration of interviewing methods</a> (by Graham R Gibbs, CC-BY-NC-SA)</li>
