--- a/index.html
+++ b/index.html
@@ -115,7 +115,6 @@
 <li><a href="#slides">Slides</a></li>
 </ul></li>
 <li><a href="#read-more">Read more…</a><ul>
-<li><a href="#further">Further</a></li>
 <li><a href="#examples">Examples</a></li>
 <li><a href="#consentForm">Consent and Release Form</a></li>
 </ul></li>
@@ -1277,12 +1276,11 @@ While I think I gained something out of it, these changes did not result in a ne
 <p>If you are not fed up with finding user needs, read those books.</p>
 <ul>
 <li><p>Goodman, Elizabeth ; Kuniavsky, Mike ; Moed, Andrea: <strong>Observing the User Experience : A Practitioner's Guide to User Research</strong>. 2. Edition. Amsterdam: Elsevier, 2012. ISBN 978-0-123-84870-3 <br> <em>covers multiple user reserach methods as well as reserach planning, recruiting and communicating results. Particulary interesting are the chapters on recruiting and analysis of qualitative data.</em></p></li>
-<li><p>Portigal, Steve: <strong>Interviewing Users : How to Uncover Compelling Insights</strong>. 1. Edition. New York: Rosenfeld Media, LLC, 2013. ISBN 978---1-9-33-82-0 <br> *As the title suggestes it’s focused on asking questions and listening to answers, though it includes additional methods as well. Includes lots of useful tips.</p></li>
-<li><p>Galman, Sally Campbell: <strong>Shane, the Lone Ethnographer: A Beginner's Guide to Ethnography</strong>. Lanham: Rowman Altamira, . ISBN 978-0-759-10344-3 <br> <em>Lots of the methods I described originated in ethnography. This book gives an hands on and thoughtful introduction to enthography. Comes as a comic and is fun to read. Minor flaw: The lettering is a bit obscure</em></p></li>
-<li><p>Clarke, Victoria ; Braun, Virginia: <strong>Successful Qualitative Research : A Practical Guide for Beginners</strong>. New.. London: SAGE, 2013. ISBN 978-1-847-87581-5 <br> <em>This book is aimed at aspiring academic researchers. While involving theory, it is still a very practical guide. It inspired much of the analysis section in this book. Interesting for those who want to know more about doing thorough analysis of data (using the method of »Thematic Analysis«) </em></p></li>
-<li><p>Holtzblatt, Karen ; Wendell, Jessamyn Burns ; Wood, Shelley: <strong>Rapid Contextual Design : A How-to Guide to Key Techniques for User-centered Design</strong>. Amsterdam: Elsevier, 2005. ISBN 978-0-123-54051-5 <br> *Describes a collection of methods user research. It is aimed at bigger teams (I assume with time and money). However, its mentioned here since the idea of grouping data as core activity of data analyis is from it.</p></li>
+<li><p>Portigal, Steve: <strong>Interviewing Users : How to Uncover Compelling Insights</strong>. 1. Edition. New York: Rosenfeld Media, LLC, 2013. ISBN 978---1-9-33-82-0 <br> *As the title suggests, it’s focused on asking questions and listening to answers, but it covers additional methods as well. Includes lots of useful tips.</p></li>
+<li><p>Galman, Sally Campbell: <strong>Shane, the Lone Ethnographer: A Beginner's Guide to Ethnography</strong>. Lanham: Rowman Altamira, . ISBN 978-0-759-10344-3 <br> <em>Lots of the methods I described originated in ethnography. This book gives an hands-on and thoughtful introduction to enthography. Comes as a comic and is fun to read. Minor flaw: The lettering is a bit obscure</em></p></li>
+<li><p>Clarke, Victoria ; Braun, Virginia: <strong>Successful Qualitative Research : A Practical Guide for Beginners</strong>. New.. London: SAGE, 2013. ISBN 978-1-847-87581-5 <br> <em>This book is aimed at aspiring academic researchers. Hands-on but covers the underlying (social science) theory as well. It inspired much of the analysis section in this book. Interesting for those who want to know more about doing thorough analysis of data (using the method of »Thematic Analysis«) </em></p></li>
+<li><p>Holtzblatt, Karen ; Wendell, Jessamyn Burns ; Wood, Shelley: <strong>Rapid Contextual Design : A How-to Guide to Key Techniques for User-centered Design</strong>. Amsterdam: Elsevier, 2005. ISBN 978-0-123-54051-5 <br> *Describes a collection of methods for user research. It is aimed at bigger teams (with time and money, I assume). However, its mentioned here since the idea of grouping data as core activity of data analyis is from it.</p></li>
 </ul>
-<h3 id="further"><a href="#further">Further</a></h3>
 <h3 id="examples"><a href="#examples">Examples</a></h3>
 <ul>
 <li>Watch a <a href="https://www.youtube.com/watch?v=9t-_hYjAKww">demonstration of interviewing methods</a> (by Graham R Gibbs, CC-BY-NC-SA)</li>
