html included! minor structural changes (only headlines), no reordering

--- a/index.html
+++ b/index.html
@@ -114,8 +114,13 @@
 <li><a href="#written-reports">Written Reports</a></li>
 <li><a href="#slides">Slides</a></li>
 </ul></li>
-<li><a href="#read-more">Read more…</a><ul>
+</ul></li>
+<li><a href="#appendix">Appendix</a><ul>
+<li><a href="#learn-even-more">Learn (even) more</a><ul>
+<li><a href="#books">Books</a></li>
 <li><a href="#examples">Examples</a></li>
+</ul></li>
+<li><a href="#forms-and-templates">Forms and Templates</a><ul>
 <li><a href="#consentForm">Consent and Release Form</a></li>
 </ul></li>
 </ul></li>
@@ -1272,8 +1277,9 @@ While I think I gained something out of it, these changes did not result in a ne
 <figure>
 <img src="images/slidesExample.png" alt="a row of slides from a presentation on wiki use for teaching at university" /><figcaption>a row of slides from a presentation on wiki use for teaching at university</figcaption>
 </figure>
-<h2 id="read-more"><a href="#read-more">Read more…</a></h2>
-<p>If you are not fed up with finding user needs, read those books.</p>
+<h1 id="appendix"><a href="#appendix">Appendix</a></h1>
+<h2 id="learn-even-more"><a href="#learn-even-more">Learn (even) more</a></h2>
+<h3 id="books"><a href="#books">Books</a></h3>
 <ul>
 <li><p>Goodman, Elizabeth ; Kuniavsky, Mike ; Moed, Andrea: <strong>Observing the User Experience : A Practitioner's Guide to User Research</strong>. 2. Edition. Amsterdam: Elsevier, 2012. ISBN 978-0-123-84870-3 <br> <em>covers multiple user reserach methods as well as reserach planning, recruiting and communicating results. Particulary interesting are the chapters on recruiting and analysis of qualitative data.</em></p></li>
 <li><p>Portigal, Steve: <strong>Interviewing Users : How to Uncover Compelling Insights</strong>. 1. Edition. New York: Rosenfeld Media, LLC, 2013. ISBN 978---1-9-33-82-0 <br> *As the title suggests, it’s focused on asking questions and listening to answers, but it covers additional methods as well. Includes lots of useful tips.</p></li>
@@ -1286,6 +1292,7 @@ While I think I gained something out of it, these changes did not result in a ne
 <li>Watch a <a href="https://www.youtube.com/watch?v=9t-_hYjAKww">demonstration of interviewing methods</a> (by Graham R Gibbs, CC-BY-NC-SA)</li>
 <li><a href="https://github.com/idno/User-Research/tree/master/Interviews">Example Interview Guides</a> (by Erin Richey, CC0)</li>
 </ul>
+<h2 id="forms-and-templates"><a href="#forms-and-templates">Forms and Templates</a></h2>
 <h3 id="consentForm"><a href="#consentForm">Consent and Release Form</a></h3>
 <p>(based on a form from <a href="http://www.usability.gov/">http://www.usability.gov</a>, downloadable under <a href="http://www.usability.gov/how-to-and-tools/resources/templates/consent-recording-release-form-adult.html">http://www.usability.gov/how-to-and-tools/resources/templates/consent-recording-release-form-adult.html</a>, released as public domain)</p>
 <p><br /><br /> <strong>Consent &amp; Recording Release Form - Adult</strong></p>
