--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
   <![endif]-->
   <link rel="stylesheet" href="styles/styles.css">
+  <link rel="stylesheet" href="styles/print.css">
 </head>
 <body>
 <div id="wrapper">
@@ -29,7 +30,7 @@
 <li><a href="#how-can-i-find-participants">How can I find participants?</a></li>
 <li><a href="#how-many-participants-do-i-need">How many participants do I need?</a></li>
 </ul></li>
-<li><a href="#prepare-the-session">Prepare the session</a><ul>
+<li><a href="#prepare-the-research-session">Prepare the research session</a><ul>
 <li><a href="#questiontopics">What do you want to find out?</a></li>
 <li><a href="#write-a-cheat-sheet">Write a cheat sheet</a></li>
 <li><a href="#equipment">Equipment</a><ul>
@@ -126,7 +127,7 @@
 </ul></li>
 </ul>
 </nav>
-<!-- compile with  ""pandoc --toc -B templates/includeBefore.pandoc -A templates/includeAfter.pandoc  -s -c styles/styles.css text/allURBook.md -t html5 -o index.html"" -->
+<!-- compile with  "pandoc --toc -B templates/includeBefore.pandoc -A templates/includeAfter.pandoc  -s -c styles/styles.css -c styles/print.css text/allURBook.md -t html5 -o index.html" -->
 
 <h1 id="license"><a href="#license">License</a></h1>
 <p><a rel="license" href="http://creativecommons.org/licenses/by/4.0/"><img alt="Creative Commons Lizenzvertrag" style="border-width:0" src="https://i.creativecommons.org/l/by/4.0/88x31.png" /></a><br /><span xmlns:dct="http://purl.org/dc/terms/" property="dct:title">A Beginner’s Guide to Finding User Needs</span> by <a xmlns:cc="http://creativecommons.org/ns#" href="http://jdittrich.github.io/userNeedResearchBook/" property="cc:attributionName" rel="cc:attributionURL">Jan Dittrich</a> licensed under a <a rel="license" href="http://creativecommons.org/licenses/by/4.0/">Creative Commons Attribution 4.0 International License</a>.</p>
@@ -179,7 +180,7 @@
 <p>There are no clear cut rules of how many participants are enough. However, most of my projects have between 3 and 8 participants. If I really need to be sure that what I notice is consistent I'd do research with 10, but thats about the limit I can manage on my own.</p>
 <p>You can consider doing your research iteratively: start with three or four participants and begin with the analysis as soon as possible (steps like writing your comments to the data or even starting to create possible grouping is possible after having the data of at least two participants). Take a look at the first (preliminary) findings: are the patterns repeating themselves and are they consistent between participants and situations? Or do they vary widely? If they are consistent, you may do research with few additional participants to refine and check and to explore details – or, if time is up, leave it the way it is.</p>
 <p>If preliminary findings vary and it is hard to see any patterns consider involving more participants and review the scope and goal of your research. It is possible that there is just a variety of patters and the need for more users to make sense of the data. But it could as well be the case that your research focus is very broad and hard to research. In this case try to narrow down the focus and the activities you need to know about before involving the next batch of participants.</p>
-<h1 id="prepare-the-session"><a href="#prepare-the-session">Prepare the session</a></h1>
+<h1 id="prepare-the-research-session"><a href="#prepare-the-research-session">Prepare the research session</a></h1>
 <h2 id="questiontopics"><a href="#questiontopics">What do you want to find out?</a></h2>
 <p>Before you collect the data, decide what you want to find out. Let's look at some topics that might be of interest exploring:</p>
 <p>I usually have three aspects I think of when I prepare my questions:</p>
@@ -194,7 +195,6 @@
 <li>they cover design relevant topics</li>
 <li>three points are easy enough to remember even in the midst of research.</li>
 </ul>
-<p>When thinking about what you want to find out, keep in mind that user need research is not hypothesis testing (like when doing statistics for a scientific publications). You want to find out new things, especially such that you did not know about nor expected. Thus these questions are a starting point.</p>
 <p>Let me show you the questions I came up with for finding out about the needs of designers who create layouts.</p>
 <h4 id="activities"><a href="#activities">Activities</a></h4>
 <div class="example">
@@ -229,13 +229,13 @@
 <p>When you have started with gathering data you can further refine your questions. You will get new ideas or want to refine questions since you tried them and may notice shortcomings or opportunities. For example, in the research on graphic design I noticed that idea generation during work was important for the participants and an interesting topic to research. Thus I added questions like »how do you generate new ideas« or »How do you know if an idea you have works?«. Note that I did not ask directly »do you generate ideas while implementing designs«. This would be a question that urges to be answered with »yes« or »no«. Such short answers give no context. But we need the context, the reasons for actions and the course of events to know not only how work is done but why it is done, too</p>
 <p>In later sections we will have a further look at the does and dont’s of questions.</p>
 <h2 id="write-a-cheat-sheet"><a href="#write-a-cheat-sheet">Write a cheat sheet</a></h2>
-<p>You should ensure that questions you prepare are still on your mind when doing the interview. A good way to ensure this is to taking a cheat sheet along.</p>
+<p>You should ensure that questions you prepare are still on your mind when doing the interview. A good way to ensure this is to taking a cheat sheet (more formally also called »Interview Guide«) along.</p>
 <p>What goes into such a sheet? The biggest part will be <strong>questions</strong> which you created beforehand (take a look at <a href="#questiontopics">»What do you want to find out?«</a> for collecting possible questions). When you write the questions on the cheat sheet, start with the general topics and progress towards more specific ones. This is the order that makes sense in the course of a research session. Nevertheless, that order is only a helpful guess. You will usually deviate a bit (or a lot) from your cheat sheet.</p>
 <p>Often I include some kind of <strong>checklist</strong> on the top, especially if there are legal matters involved, such as signing a consent form. Thus I can tick off what we already dealt with and immediately see if I forgot something.</p>
 <p>As a beginner you may have some difficulties with formulating your questions without preparations when spontaneously entering on a new subject that happens to emerge in the research session.</p>
 <p>In this case you can help yourself along with some reminders on the sheet, like »Activities/Motivations/Problems«, »How and Why«, or, for the graphics design topic: »creativity/variations/creative rules/technology« or the like.</p>
 <h2 id="equipment"><a href="#equipment">Equipment</a></h2>
-<p>With a participant ttalks about new and interesting things you want to be able to remember what was said. Thus we record the interview – and we will need some equipment for doing that. Lets have a look.</p>
+<p>With a participant talks about new and interesting things you want to be able to remember what was said. Thus we record the interview – and we will need some equipment for doing that. Let’s have a look what we can use.</p>
 <figure>
 <img src="images/interviewEquipment.svg" alt="Equipment for user research: paper, pen, audio recorder" /><figcaption>Equipment for user research: paper, pen, audio recorder</figcaption>
 </figure>
@@ -247,7 +247,7 @@
 <li>Something to write on. A clipboard is great.</li>
 </ul>
 <h3 id="audio-recording"><a href="#audio-recording">Audio Recording</a></h3>
-<p>Audio record you interview to have a backup in case you could not keep up with taking notes and to be able to fully concentrate on the participant if needed. Either use your smartphone and an audio recording app or use an audio recorder. Try before if the audio on the recording is still loud and clear enough if you have an arm’s length between you and the device. Charge the devices fully.</p>
+<p>If you audio-record you interview you have a backup in case you could not keep up with taking notes and to be able to fully concentrate on the participant if needed. To do an audio recording, either use your smartphone and an audio recording app or use an audio recorder. Test, if the audio on the recording is still loud and clear enough if you have an arm’s length between you and the device. Charge the batteries fully so you don’t run out of battery in the midst of research.</p>
 <h3 id="camera"><a href="#camera">Camera</a></h3>
 <p>A camera is not a must but can be useful, especially if your research involves much participant observation or if you don’t feel confident about your sketching skills.</p>
 <h1 id="data-gathering"><a href="#data-gathering">Data Gathering</a></h1>
@@ -373,7 +373,7 @@ conversation: You ask questions, the user answered them. -->
 <figure>
 <img src="images/talkDiagram_closed.svg" alt="short closed questions" /><figcaption>short closed questions</figcaption>
 </figure>
-<p>These questions demand very specific answers mostly out of a determined set: Yes or no, marks from A-F, a list of nouns. They would be useful if you would want to do statistics, for analysis leading to statements like »56.3% agreed strongly on Question X«. However, we want to find out about the <em>why</em> and <em>how</em> of the participant’s work here.</p>
+<p>These questions demand very specific answers mostly out of a determined set: Yes or no, marks from A-F, a list of nouns. They would be useful if you would want to do statistics, for analysis that allows us to give results like »56.3% agreed strongly on Question X«. However, we want to find out about the <em>why</em> and <em>how</em> of the participant’s work here [^Research concerned with finding out about »how« and »why« using methods like interviews and observations is also called »qualitative« reserach. In contrast, »quantitative reserach« usually tests hypothesis (like »an orange ›buy‹ button generates more sales that a blue one «) and employs controlled experiments and statistics. In this book we learn about qualitative methods] .</p>
 <p>Imagine, in contrast to the research session outlined above (short answers, short questions) a day-to-day situation, in which you get to know about somebody else’s experiences: A conversation with a friend. In such an exchange you will tell each other about your experiences, what you felt, why you did this and that etc. In a diagram it would look like this:</p>
 <figure>
 <img src="images/talkDiagram_friend.svg" alt="giving longer aswers, equal share" /><figcaption>giving longer aswers, equal share</figcaption>
@@ -1285,7 +1285,7 @@ While I think I gained something out of it, these changes did not result in a ne
 <li><strong>Interviewing Users : How to Uncover Compelling Insights</strong> by Portigal, Steve. 1. Edition. New York: Rosenfeld Media, LLC, 2013. ISBN 978---1-9-33-82-0 <br> <em>As the title suggests, it’s focused on asking questions and listening to answers, but it covers additional methods as well. Includes lots of useful tips.</em></li>
 <li><strong>Shane, the Lone Ethnographer: A Beginner's Guide to Ethnography</strong> by Galman, Sally Campbell. Lanham: Rowman Altamira, . ISBN 978-0-759-10344-3 <br> <em>Lots of the methods I described originated in ethnography. This book gives an hands-on and thoughtful introduction to enthography. Comes as a comic and is fun to read. Minor flaw: The lettering is a bit obscure</em></li>
 <li><strong>Successful Qualitative Research : A Practical Guide for Beginners</strong> by Clarke, Victoria; Braun, Virginia: . New.. London: SAGE, 2013. ISBN 978-1-847-87581-5 <br> <em>This book is aimed at aspiring academic researchers. Hands-on but covers the underlying (social science) theory as well. It inspired much of the analysis section in this book. Interesting for those who want to know more about doing thorough analysis of data (using the method of »Thematic Analysis«) </em></li>
-<li><strong>Rapid Contextual Design : A How-to Guide to Key Techniques for User-centered Design</strong>by Holtzblatt, Karen; Wendell, Jessamyn Burns; Wood, Shelley. Amsterdam: Elsevier, 2005. ISBN 978-0-123-54051-5 <br> <em>Describes a collection of methods for user research. It is aimed at bigger teams (with time and money, I assume). However, its mentioned here since the idea of grouping data as core activity of data analyis is from it.</em></li>
+<li><strong>Rapid Contextual Design : A How-to Guide to Key Techniques for User-centered Design</strong>by Holtzblatt, Karen; Wendell, Jessamyn Burns; Wood, Shelley. Amsterdam: Elsevier, 2005. ISBN 978-0-123-54051-5 <br> <em>Describes a collection of methods for user research. It is aimed at bigger teams (with time and money, I assume). However, its mentioned here since the idea of grouping data as core activity of data analysis is from it.</em></li>
 </ul>
 <h3 id="examples"><a href="#examples">Examples</a></h3>
 <ul>
