--- a/index.html
+++ b/index.html
@@ -974,10 +974,10 @@ Memory fades quickly
 <p>The analysis methods described here can be used in both media. Nevertheless, each way has different strengths.</p>
 <h3 id="comparison"><a href="#comparison">Comparison</a></h3>
 <figure>
-<img src="images/affinityDiagram2.jpg" alt="analysing data analog by using sticky notes" /><figcaption>analysing data analog by using sticky notes</figcaption>
+<img src="images/affinityDiagram2.jpg" alt="analysing data analog by using sticky notes. Theme are written on yellow sticky notes, themes of themes are written on orange sticky notes" /><figcaption>analysing data analog by using sticky notes. Theme are written on yellow sticky notes, themes of themes are written on orange sticky notes</figcaption>
 </figure>
 <figure>
-<img src="images/analysisWord_copypaste.png" alt="analysing data digitally by using a word processor" /><figcaption>analysing data digitally by using a word processor</figcaption>
+<img src="images/hierarchyWordprocessorAnalysis.png" alt="analysing data digitally by using a word processor. Themes have gray headlines, themes of themes have black headlines" /><figcaption>analysing data digitally by using a word processor. Themes have gray headlines, themes of themes have black headlines</figcaption>
 </figure>
 <p>The resources you need for analysing on your computer are:</p>
 <ul>
