--- a/index.html
+++ b/index.html
@@ -25,6 +25,11 @@
 <ul>
 <li><a href="#license">License</a></li>
 <li><a href="#about-this-text">About this text</a></li>
+<li><a href="#user-need-research">User Need Research?</a><ul>
+<li><a href="#why-you-should-so-user-research">Why you should so user research?</a></li>
+<li><a href="#example-for-user-need-research-e-learning">Example for User Need Research: e-Learning</a></li>
+<li><a href="#the-structure-of-this-book">The structure of this book</a></li>
+</ul></li>
 <li><a href="#find-people">Find People</a><ul>
 <li><a href="#who-are-possible-participants">Who are possible participants?</a></li>
 <li><a href="#how-can-i-find-participants">How can I find participants?</a></li>
@@ -145,8 +150,52 @@
 <p>To have knowledge about the »how« and »why« of the user’s work allows you to create innovative products that meet the users’ needs. As well, you can utilize this knowledge to improve existing products.</p>
 <p>I will teach methods for user needs research in a way that is descriptive and allows quick application of the learned methods by using tools that are readily available to you. I give examples to demonstrate the use of methods in practice. I hope you can imagine yourself applying the described methods when reading – and I want to avoid teaching something that seems like mere theory to you.</p>
 <p>Don’t get me wrong (especially if you are a seasoned researcher for user needs or a professional in some other social science field). It is not that I think theory is superfluous and should be avoided by practitioners. I just want to empower beginners by providing a start in the field which is hands-on and leads to visible results.</p>
-<!---  TODO Intro about here --->
-
+<h1 id="user-need-research"><a href="#user-need-research">User Need Research?</a></h1>
+<h2 id="why-you-should-so-user-research"><a href="#why-you-should-so-user-research">Why you should so user research?</a></h2>
+<p>User Need Research helps us to find out is how and why users do their work. This is different from usability testing. Testing is great for finding out about users problems, bugs and possibilities to tweak an existing product. However, usability tests tell you few about the why and how if users work. You may give them a task to accomplish in the usability testing – but are these the tasks they are doing in their actual work? And if yes – why is this task done anyway?</p>
+<p>Thus we need methods that may inform us about things we don't know about yet. Methods that allow us to explore the actual actions and the reasons behind them – because even if you might be puzzled about some things you observe they usually make perfect sense for the users.</p>
+<p>I think the usefulness of User Need Research is best understood by examples.</p>
+<h2 id="example-for-user-need-research-e-learning"><a href="#example-for-user-need-research-e-learning">Example for User Need Research: e-Learning</a></h2>
+<p>Some time ago I did research on the use of computers and web for learning purposes. At the institution, a web based learning software (an LMS, Learning management system) was already existing. I assumed that students would probably use it for collaboration, professors for preparing interactive quizzes for the students and for enabling them to review material. But we did not want to rely on our guesses, so we did research on how and why students and teaching staff used computers and web for learning (note that we deliberately did research on the use web and computers for learning, not for using the specific system that was existing).</p>
+<p>We recruited students and teaching staff from various courses and did interviews with them. The gathered data was than analyzed to find out how and why computers and internet were used for learning.</p>
+<p>We found out that not quizzes, workgroups and videos were the tools of trade, but file exchange. The following uses of files were typical:</p>
+<ol type="1">
+<li><p>slides (=learning material) send by the professors or their assistants</p></li>
+<li><p>Texts (=homework) the students send to the professors or their assistants.</p></li>
+<li><p>Project work of student group in the specific file formats (if a group worked on images it might be photoshop® files etc.)</p></li>
+<li><p>Exercise material of students like old exam questions for practice.</p></li>
+</ol>
+<p>In addition, students and teaching staff exchanges messages via mail; among students mail and facebook® Messages were rather popular, too.</p>
+<p>Why did students and teaching staff alike use files and messages instead of specialized learning solutions?</p>
+<p>All these methods we saw used skills teaching staff and students already had: Creating files and exchanging them and writing messages So a major need was to get material to students and receive material from them with the least effort and the least demand for learning new skills. Same for the students: They needed to do their projects and homework as efficiently as possible and they too did rely on mail and on services like dropbox® to do project work together or share old exam questions for practicing.</p>
+<p>This led us to several ideas which guided the project in the following phases:</p>
+<ul>
+<li>Consider File Up/and Download as a core tool</li>
+<li>Carefully Test the solution to make it at least as usable and useful as existing ways of file exchange</li>
+<li>To increase adoption to the new system ensure that people know about the feasibility for their standard-usecases (Files!) and before showing the additional possibilities.</li>
+<li>In General: Keep in mind that change is hard</li>
+</ul>
+<p>Even tough the study was not too big and the results did not uncover some totally contra-intuitive way of seeing our project it was totally worth the effort since we possibly would have put lots of money into solving problems that were not even existing or to dismiss needs which that are crucial for our users.</p>
+<h2 id="the-structure-of-this-book"><a href="#the-structure-of-this-book">The structure of this book</a></h2>
+<p>I will show you the process of user need research in the following chapters of this book. It is organized in the following sections:</p>
+<ol type="1">
+<li>Finding Participants for your studies</li>
+<li>Preparing your research session</li>
+<li>Gather data by asking questions and observation</li>
+<li>analyzing the gathered data</li>
+<li>reporting your results</li>
+</ol>
+<p>In each chapter I will give several examples. The examples have their own formatting, it looks like this:</p>
+<div class="example">
+<p><em>This is not a user research interview, but a famous bot chatting with me:</em></p>
+<p>[…]</p>
+<p>ELIZA: You seem to be quite positive.</p>
+<p>YOU: I am!</p>
+<p>ELIZA: Is it because you are that you came to me ?</p>
+[…]
+</div>
+<p>Partly, the examples will draw from a little study about graphic designer’s use of their tools.</p>
+<p>Thats about what you should know about the book.</p>
 <h1 id="find-people"><a href="#find-people">Find People</a></h1>
 <p>In user research we want to find out what our users do and how and why they do it. If we know this, we can design our products accordingly.</p>
 <p>To be able to do research on the »how« and »why« of user’s work, you need to find some users who would like to answer your questions and would show you what they do. These users are our (research) participants. (Your participants may be called your »sample«, in contrast to all those who could be possibly be participants, the »population«. So a sample – some users – is a part of the population – all possible users)</p>
@@ -752,7 +801,7 @@ Memory fades quickly
 <li>Alternative places for additional comments: Either right margin or bottom.</li>
 </ul>
 </div>
-<p>The notes from the reserach session and later added supplements from my memory are treated alike in my documents since they are all data I gathered by listening or observing the participant. But I take care that later added design ideas and research questions are still easily distinguishable from the actual data that I gathered in the research session.</p>
+<p>The notes from the research session and later added supplements from my memory are treated alike in my documents since they are all data I gathered by listening or observing the participant. But I take care that later added design ideas and research questions are still easily distinguishable from the actual data that I gathered in the research session.</p>
 <h2 id="review-sketches-photos-and-audio"><a href="#review-sketches-photos-and-audio">Review Sketches, Photos and Audio</a></h2>
 <h3 id="sketches-1"><a href="#sketches-1">Sketches</a></h3>
 <p>Since my sketches are usually on the same sheet of paper as my notes, I review my sketches when I am transcribing the notes.</p>
