--- a/index.html
+++ b/index.html
@@ -25,10 +25,10 @@
 <ul>
 <li><a href="#license">License</a></li>
 <li><a href="#about-this-text">About this text</a></li>
-<li><a href="#user-need-research">User Need Research?</a><ul>
-<li><a href="#why-you-should-so-user-research">Why you should so user research?</a></li>
+<li><a href="#introduction">Introduction</a><ul>
+<li><a href="#why-should-i-use-the-methods-described-in-this-book">Why should I use the methods described in this book?</a></li>
 <li><a href="#example-for-user-need-research-e-learning">Example for User Need Research: e-Learning</a></li>
-<li><a href="#the-structure-of-this-book">The structure of this book</a></li>
+<li><a href="#this-texts-structure">This text’s structure</a></li>
 </ul></li>
 <li><a href="#find-people">Find People</a><ul>
 <li><a href="#who-are-possible-participants">Who are possible participants?</a></li>
@@ -150,8 +150,8 @@
 <p>To have knowledge about the »how« and »why« of the user’s work allows you to create innovative products that meet the users’ needs. As well, you can utilize this knowledge to improve existing products.</p>
 <p>I will teach methods for user needs research in a way that is descriptive and allows quick application of the learned methods by using tools that are readily available to you. I give examples to demonstrate the use of methods in practice. I hope you can imagine yourself applying the described methods when reading – and I want to avoid teaching something that seems like mere theory to you.</p>
 <p>Don’t get me wrong (especially if you are a seasoned researcher for user needs or a professional in some other social science field). It is not that I think theory is superfluous and should be avoided by practitioners. I just want to empower beginners by providing a start in the field which is hands-on and leads to visible results.</p>
-<h1 id="user-need-research"><a href="#user-need-research">User Need Research?</a></h1>
-<h2 id="why-you-should-so-user-research"><a href="#why-you-should-so-user-research">Why you should so user research?</a></h2>
+<h1 id="introduction"><a href="#introduction">Introduction</a></h1>
+<h2 id="why-should-i-use-the-methods-described-in-this-book"><a href="#why-should-i-use-the-methods-described-in-this-book">Why should I use the methods described in this book?</a></h2>
 <p>User Need Research helps us to find out is how and why users do their work. This is different from usability testing. Testing is great for finding out about users problems, bugs and possibilities to tweak an existing product. However, usability tests tell you few about the why and how if users work. You may give them a task to accomplish in the usability testing – but are these the tasks they are doing in their actual work? And if yes – why is this task done anyway?</p>
 <p>Thus we need methods that may inform us about things we don't know about yet. Methods that allow us to explore the actual actions and the reasons behind them – because even if you might be puzzled about some things you observe they usually make perfect sense for the users.</p>
 <p>I think the usefulness of User Need Research is best understood by examples.</p>
@@ -176,8 +176,8 @@
 <li>In General: Keep in mind that change is hard</li>
 </ul>
 <p>Even tough the study was not too big and the results did not uncover some totally contra-intuitive way of seeing our project it was totally worth the effort since we possibly would have put lots of money into solving problems that were not even existing or to dismiss needs which that are crucial for our users.</p>
-<h2 id="the-structure-of-this-book"><a href="#the-structure-of-this-book">The structure of this book</a></h2>
-<p>I will show you the process of user need research in the following chapters of this book. It is organized in the following sections:</p>
+<h2 id="this-texts-structure"><a href="#this-texts-structure">This text’s structure</a></h2>
+<p>I will show you the process of researching the user’s needs in the following chapters of this book. The book is organized in the following sections:</p>
 <ol type="1">
 <li>Finding Participants for your studies</li>
 <li>Preparing your research session</li>
